Add steal resources