@@ -14,17 +14,16 @@ import com.sk89q.worldedit.math.BlockVector3;
 import lombok.Getter;
 
 import java.io.IOException;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 
 public class CraftDislikeDeposit extends CraftDeposit implements DislikeDeposit
 {
 	@Getter
-	private final Set<Resource> resources = Collections.singleton(Resource.builder()
+	private final Set<Resource> resources = Set.of(Resource.builder()
 			.type(Resource.Type.DISLIKE)
 			.relativePosition(BlockVector3.at(0, 1, 0))
 			.subtractOperation(this::subtract)
+			.emptyChecker(this::isEmpty)
 			.build());
 	
 	public CraftDislikeDeposit(Town town)
@@ -74,15 +73,19 @@ public class CraftDislikeDeposit extends CraftDeposit implements DislikeDeposit
 	}
 	
 	@Override
-	protected int subtract(int dislikes)
+	protected int subtract(int balance)
 	{
-		if(dislikes < 0)
-		{
-			throw new UnsupportedOperationException("subtracted value can't be negative.");
-		}
-		
-		final int subtract = Math.min(getVirtualCapacity(), dislikes);
-		capacityToSteal -= subtract;
-		return town.subtractDislikes(dislikes);
+		return subtractVirtualBalance(this::setRemainingCapacity,
+				town::subtractDislikes,
+				this::getVirtualBalance,
+				this::getRemainingCapacity,
+				balance);
+	}
+	
+	@Override
+	public void onTownDislikeBalanceChange()
+	{
+		super.onTownDislikeBalanceChange();
+		ifUnderAttackUpdateResources();
 	}
 }
